# bikes

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-053659c648f889b633519de09e51ea6fbd7bc6e6aecaab8b2d38d7649547e601.json  query-28b8bdb7474cd65c9749ec74393f0fd21c2098715182c204f31086222037713d.json  query-456ecba6af841e19eae6543db2c65d6b70f425c09d0d020033da279d0a1fcea9.json  query-48b605719d0edd798fbc96098c33b417bfb55b1f9d385ccc1accb815323e5d5c.json  query-d0d0643c7e0bb1c861fcb69d308c8ff7d5908677b154514532e9dc37b063a037.json  query-f92a0e9405fca1a846d4c55e93590b01162fc522d86d928db1b25d17b20be490.json  query-f9f1b09f798628955c01e00ca978bcbc46c409ed408e6aadf824f39b2501d81b.json
arm64-cross/: Containerfile  Dockerfile  build.sh
deb/: Containerfile  Dockerfile  bikes.7  bikes.service  build-deb-arm64.sh  build.sh  changelog  conffiles  control  copyright  env  postinst
migrations/: 001_init.sql  002_drop_station_grp_dist.sql
src/: conf.rs  db.rs  err.rs  html_template.rs  lib.rs  main.rs  page.rs  server.rs  station.rs  tile.rs
src/station/: group.rs  nearby.rs  stations.rs
static/: manifest.json  move.js  pos.js  style.css
templates/: groups.html  imgs.html  layout.html  stations.html
tests/: img.rs  integration.rs  station_data.rs
