[package]
name = "bikes"
version = "0.2.1"
edition = "2021"

[dependencies]
askama = "0.12"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "migrate", "sqlite"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
