[package]
name = "bikes"
version = "0.2.1"
edition = "2024"

[dependencies]
askama = "0.12"
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "migrate", "sqlite"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
